[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/FailScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/lose_screen.png" type="Texture" id=2]
[ext_resource path="res://scenes/entity/BigEye.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/LifetimeReport.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/textures/ui_sheet.png" type="Texture" id=5]
[ext_resource path="res://assets/m3x6.ttf" type="DynamicFontData" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 480, 270 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 480, 0, 480, 270 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 656, 368, 64, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 656, 400, 64, 32 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 6 )

[node name="FailScreen" type="Node"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
frame = 1
playing = true
centered = false

[node name="BigEye" parent="." instance=ExtResource( 3 )]
position = Vector2( 240, 34 )

[node name="LifetimeReport" parent="." instance=ExtResource( 4 )]

[node name="ToggleLR" type="TextureButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -32.0
margin_right = 64.0
texture_normal = SubResource( 4 )
texture_hover = SubResource( 5 )
stretch_mode = 2

[node name="Label" type="Label" parent="ToggleLR"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.968627, 0.960784, 0.321569, 1 )
custom_fonts/font = SubResource( 6 )
text = "View Report"
align = 1
valign = 1

[node name="PlayAgain" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -32.0
texture_normal = SubResource( 4 )
texture_hover = SubResource( 5 )
stretch_mode = 2

[node name="Label" type="Label" parent="PlayAgain"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.968627, 0.960784, 0.321569, 1 )
custom_fonts/font = SubResource( 6 )
text = "Play Again"
align = 1
valign = 1

[connection signal="pressed" from="ToggleLR" to="." method="_on_ToggleLR_pressed"]
[connection signal="pressed" from="PlayAgain" to="." method="_on_PlayAgain_pressed"]
